
Version 0.6-6 (??-???-2011, Rev. ???)
=====================================

- Graphs without epsilon edges can be processed by a
  much faster procedure written in C.


Version 0.6-5 (26-May-2011, Rev. 825)
=====================================

- New dependency: CommonJavaJars
  This package contains now all the third party libraries.

- New example graphs:
  - Two versions of improved fallback procedures

- Improved placeNodes dialog.

- JavaGD plot is shown in CI dialog.

- Fixed bug with directory separators on Windows.

- Initialize the Java VM only if it is not initialized already.


Version 0.6-4 (11-May-2011, Rev. 782)
=====================================

- Fixed bug with saving and loading on Windows.

- Fixed bug with two graphs that could not be loaded.

- Fixed bug that the GUI expected a valid graph object on 
  start up.
  
- If an edge weights is 0 after variable replacement, 
  the edge is removed.
  
- Updated documentation that the graph package is not
  available any more on CRAN. 

- Layout of graph can be changed automatically from the GUI.

 22 files changed, 130 insertions(+), 38 deletions(-)

  
Version 0.6-3 (09-May-2011, Rev. 767)
=====================================

- New dependency: JavaGD, MCPAN

- Example graphs have been renamed (Please look at ?exampleGraph).

- Greek small letters are allowed as variables
  - enter them as e.g. "\epsilon", "\iota", "\phi" in the GUI.
  - use edgeData "variableWeight" to set them in R
    (see graph2FromBretzEtAl2009 as an example).
  - epsilon has to be entered as "\epsilon" instead of "e"

- Below the graphPanel is now a new panel with 
  graph description and graph analysis. 

- Function placeNodes is now exported with new parameters:
  nrow, ncol and force
  
- We use package highlight for the manuals.

- New example graphs:
   
  - Graphs from Hung and Wang (2010) and 
    Bretz et al. (2011)

- All example graphs have a description and