@@ -16,7 +16,6 @@ High priority:
 - somehow p-value labels where disabled (but we were not in testing modus).
 - Labels like 1/3+1/2*e also in decimal format: 0.3333+0.5*e
 - Variable node weights
-- matrix2graph, graph2matrix have to deal with character matrices in case of variable graphs
 - When not using JLaTeXMath graphs with variables are not shown and saved(?) correctly
 - Compare improvedFallbackGraphII with literature
 
